--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-					<h2 class="heading-colored">Excellence &amp; Honesty</h2>
+					<h2 class="heading-colored">Excelencia &amp; Honestidad</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut praesentium nihil hic quam culpa magnam ducimus suscipit repellat quidem cumque, unde impedit, labore earum eligendi perspiciatis nemo molestiae sequi veritatis. Veritatis, reprehenderit, eaque! Rerum, libero ipsam enim, iusto adipisci quae repellendus officia consequatur ducimus cupiditate impedit, aliquam numquam excepturi.</p>
 					<p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 				</div>
@@ -119,7 +119,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Practice Areas</h1>
+					<h1>Areas de Practica</h1>
 					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Practice <span>Areas</span></p>
 				</div>
@@ -198,7 +198,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Our Team</h1>
+					<h1>Nuestro Equipo</h1>
 					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Our Team</p>
 				</div>
@@ -210,7 +210,7 @@
 					</div>
 				</div>
 				<div class="col-md-6  col-md-pull-6 animate-box" data-animate-effect="fadeInRight">
-					<h2>Jeff Finley</h2>
+					<h2>Abogado 1</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aliquid maiores, voluptatum ex. Accusantium, eum distinctio laudantium. Perferendis dolor, corporis quasi? Tempore quod molestiae quis cumque pariatur dolore vel sit, fugit delectus quasi reprehenderit officia voluptate incidunt, culpa odit impedit qui dolorum fugiat. Quidem possimus reprehenderit, quae recusandae voluptatibus magnam!</p>
 					<p>Ratione facilis quod laborum eaque illo dolore blanditiis nobis dicta voluptatem fugit optio, eveniet non dolor quia delectus, sint, dignissimos atque porro consequuntur unde. Soluta ex necessitatibus delectus saepe aliquam, culpa officiis doloremque, ipsa facere hic, voluptatem accusantium veniam, quasi! Explicabo accusantium sint, corporis consequuntur fugit ipsam, dolorum excepturi adipisci.</p>
 				</div>
@@ -223,7 +223,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-					<h2>Craig Campbell</h2>
+					<h2>Abogado 2</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aliquid maiores, voluptatum ex. Accusantium, eum distinctio laudantium. Perferendis dolor, corporis quasi? Tempore quod molestiae quis cumque pariatur dolore vel sit, fugit delectus quasi reprehenderit officia voluptate incidunt, culpa odit impedit qui dolorum fugiat. Quidem possimus reprehenderit, quae recusandae voluptatibus magnam!</p>
 					<p>Ratione facilis quod laborum eaque illo dolore blanditiis nobis dicta voluptatem fugit optio, eveniet non dolor quia delectus, sint, dignissimos atque porro consequuntur unde. Soluta ex necessitatibus delectus saepe aliquam, culpa officiis doloremque, ipsa facere hic, voluptatem accusantium veniam, quasi! Explicabo accusantium sint, corporis consequuntur fugit ipsam, dolorum excepturi adipisci.</p>
 				</div>
@@ -236,7 +236,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Contact Us</h1>
+					<h1>Contactanos</h1>
 					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contact</p>
 				</div>
@@ -245,29 +245,28 @@
 				<div class="col-md-6 col-md-push-6 animate-box">
 					<form action="#">
 						<div class="form-group">
-							<label for="name" class="sr-only">Name</label>
-							<input type="text" class="form-control" placeholder="Name" id="name">
+							<label for="name" class="sr-only">Nombre</label>
+							<input type="text" class="form-control" placeholder="Nombre" id="name">
 						</div>
 						<div class="form-group">
 							<label for="email" class="sr-only">Email</label>
 							<input type="text" class="form-control" placeholder="Email" id="email">
 						</div>
 						<div class="form-group">
-							<label for="message" class="sr-only">Message</label>
-							<textarea name="message" id="message" class="form-control" cols="30" rows="7" placeholder="Message"></textarea>
+							<label for="message" class="sr-only">Mensaje</label>
+							<textarea name="message" id="message" class="form-control" cols="30" rows="7" placeholder="Mensaje"></textarea>
 						</div>
 						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary">
+							<input type="submit" value="Enviar Mensaje" class="btn btn-primary">
 						</div>
 					</form>
 				</div>
 				<div class="col-md-4 col-md-pull-6 animate-box">
 					<div class="gtco-contact-info">
 						<ul>
-							<li class="address">198 West 21th Street, Suite 721 New York NY 10016</li>
-							<li class="phone"><a href="tel://1235235598">+ 1235 2355 98</a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">info@example.com</a></li>
-							<li class="url"><a href="#">http://example.com</a></li>
+							<li class="address">Direccion: </li>
+							<li class="phone"><a href="tel://1235235598">Telefono: </a></li>
+							<li class="email"><a href="mailto:info@yoursite.com">Correo: </a></li>
 						</ul>
 					</div>
 				</div>
@@ -281,8 +280,7 @@
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2019.</small>
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
