Se hicieron unas cuantas ediciones

--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<h2 class="heading-colored">Excelencia &amp; Honestidad</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut praesentium nihil hic quam culpa magnam ducimus suscipit repellat quidem cumque, unde impedit, labore earum eligendi perspiciatis nemo molestiae sequi veritatis. Veritatis, reprehenderit, eaque! Rerum, libero ipsam enim, iusto adipisci quae repellendus officia consequatur ducimus cupiditate impedit, aliquam numquam excepturi.</p>
-					<p><a href="#" class="read-more">Read more <i class="icon-chevron-right"></i></a></p>
 				</div>
 			</div>
 		</div>
@@ -265,8 +264,8 @@
 					<div class="gtco-contact-info">
 						<ul>
 							<li class="address">Direccion: </li>
-							<li class="phone"><a href="tel://1235235598">Telefono: </a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">Correo: </a></li>
+							<li class="phone">Telefono: </li>
+							<li class="email">Correo: </li>
 						</ul>
 					</div>
 				</div>
@@ -280,14 +279,13 @@
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2019.</small>
+						<small class="block">2019.</small>
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
 						</ul>
 					</p>
 				</div>
