Se editaron las areas de practica

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
-							<h3>Criminal Law</h3>
+							<h3>Civil</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
 						</div>
 					</div>
@@ -140,7 +140,7 @@
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
-							<h3>Industrial Law</h3>
+							<h3>Mercantil</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
-							<h3>Financial Law</h3>
+							<h3>Familiar</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
 						</div>
 					</div>
@@ -163,7 +163,7 @@
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
-							<h3>Divorce Law</h3>
+							<h3>Fiscal</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
 						</div>
 					</div>
@@ -173,7 +173,7 @@
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
-							<h3>Corporate Law</h3>
+							<h3>Laboral</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
 						</div>
 					</div>
@@ -183,7 +183,7 @@
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 						</div>
 						<div class="gtco-copy">
-							<h3>Accident Law</h3>
+							<h3>Penal</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed scelerisque sapien. Sed sodales, libero non faucibus rutrum, purus tellus finibus diam, eget ornare tortor leo eget erat. </p>
 						</div>
 					</div>
