--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Bienvenido</p>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row row-pb-md">
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<h2 class="heading-colored">Excelencia &amp; Honestidad</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut praesentium nihil hic quam culpa magnam ducimus suscipit repellat quidem cumque, unde impedit, labore earum eligendi perspiciatis nemo molestiae sequi veritatis. Veritatis, reprehenderit, eaque! Rerum, libero ipsam enim, iusto adipisci quae repellendus officia consequatur ducimus cupiditate impedit, aliquam numquam excepturi.</p>
