--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 			<div class="row row-pb-md">
-				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeInLeft">
 					<h2 class="heading-colored">Excelencia &amp; Honestidad</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut praesentium nihil hic quam culpa magnam ducimus suscipit repellat quidem cumque, unde impedit, labore earum eligendi perspiciatis nemo molestiae sequi veritatis. Veritatis, reprehenderit, eaque! Rerum, libero ipsam enim, iusto adipisci quae repellendus officia consequatur ducimus cupiditate impedit, aliquam numquam excepturi.</p>
 				</div>
