--- a/index.html
+++ b/index.html
@@ -225,28 +225,12 @@
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Contactanos</h1>
 					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contact</p>
+					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contacto</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-push-6 animate-box">
-					<form action="enviar.php" method="post">
-						<div class="form-group">
-							<label for="name" class="sr-only">Nombre</label>
-							<input type="text" class="form-control" placeholder="Nombre" id="name">
-						</div>
-						<div class="form-group">
-							<label for="email" class="sr-only">Email</label>
-							<input type="text" class="form-control" placeholder="Email" id="email">
-						</div>
-						<div class="form-group">
-							<label for="message" class="sr-only">Mensaje</label>
-							<textarea name="message" id="message" class="form-control" cols="30" rows="7" placeholder="Mensaje"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" value="Enviar Mensaje" class="btn btn-primary">
-						</div>
-					</form>
+				<div class="col-md-6 col-md-push-6 animate-box map-box">
+					<div class="map"></div>
 				</div>
 				<div class="col-md-4 col-md-pull-6 animate-box">
 					<div class="gtco-contact-info">
@@ -302,6 +286,8 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<script src="js/main.js"></script>
+
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6T497r59j9u-NBe_GgP3CA-1orhSTCjQ&callback=initMap"></script>
 
 	</body>
 </html>
