Se agrego mapa 2

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-push-6 animate-box map-box">
-					<div class="map"></div>
+				<div class="col-md-6 col-md-push-6 animate-box">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15049.704751827205!2d-99.14977315!3d19.43718345!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1551373662800" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 				<div class="col-md-4 col-md-pull-6 animate-box">
 					<div class="gtco-contact-info">
@@ -287,7 +287,6 @@
 
 	<script src="js/main.js"></script>
 
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6T497r59j9u-NBe_GgP3CA-1orhSTCjQ&callback=initMap"></script>
 
 	</body>
 </html>
